# FlipCTRL_FW

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  bitmaps.c  bitmaps.h  flipdot_driver.c  flipdot_driver.h  flipdot_gfx.c  flipdot_gfx.h  font_5x7.c  font_5x7.h  main.c
main/bitmaps/: bitmaps_weather.c  bitmaps_weather.h
main/flipdot/: flipdot_apps.c  flipdot_apps.h  flipdot_gfx.c  flipdot_gfx.h
main/fonts/: font_5x7.c
main/wifi/: configuration_weberver.h  configuration_webserver.c  openweathermap.c  openweathermap.h  sntp.c  sntp.h  wifi_manager.c  wifi_manager.h
