idf_component_register(SRCS
                        "bitmaps/bitmaps_weather.c"
                        "wifi/configuration_webserver.c"
                        "wifi/openweathermap.c"
                        "wifi/wifi_manager.c"
                        "wifi/sntp.c"
                        "fonts/font_5x7.c"
                        "flipdot/flipdot_gfx.c"
                        "flipdot/flipdot_driver.c"
                        "flipdot/flipdot_apps.c"
                        "main.c"
                    INCLUDE_DIRS
                        "."
                        "fonts"
                        "bitmaps"
                        "wifi"
                        "flipdot")